[gd_scene load_steps=2 format=3 uid="uid://bu07vd76rss0q"]

[ext_resource type="Script" uid="uid://c83enji8ih0vu" path="res://scripts/death_screen.gd" id="1_uyutr"]

[node name="death_screen" type="CanvasLayer"]
script = ExtResource("1_uyutr")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1152.0
offset_bottom = 648.0

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "You died :("
horizontal_alignment = 1

[node name="Label2" type="Label" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Restart"

[node name="Button2" type="Button" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Back to menu"

[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/Button2" to="." method="_on_button_2_pressed"]
